# archai-bom

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  README.md  pyproject.toml  requirements-lock.txt  requirements.in  requirements.txt
.github/: pull_request_template.md
.gsd/: DATA_MODEL.md  DECISIONS.md  JOURNAL.md  RESEARCH.md  ROADMAP.md  SPEC.md  STATE.md  TODO.md
.planning/: AGENTS.md  CLAUDE.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
app/: AGENTS.md  CLAUDE.md  main.py
app/api/: generate_service.py  ingest_service.py  routes.py  (+1 more)
postman/: local.postman_environment.json  phase2-generate.postman_collection.json
scripts/: AGENTS.md  CLAUDE.md  convert_images_to_pdf.py  setup_supabase_schema.py  validate-all.sh  validate-skills.sh  validate-templates.sh  validate-workflows.sh
tests/: AGENTS.md  CLAUDE.md  conftest.py  test_async_jobs.py  test_bom_calculator.py  test_bom_integration.py  test_constraint_checker.py  test_constraint_checker_performance.py  test_generation_endpoint.py  test_generation_pipeline.py  test_grid_snapper.py  test_ingestion_pipeline.py  test_layout_generator.py  test_layout_models.py  test_pdf_extractor.py  test_raster_wall_extractor.py  test_repositories.py  test_routes_prefix.py  test_security_controls.py  test_semantic_extractor.py  test_setup_supabase_schema.py  test_status_endpoint.py  test_supabase_client.py  test_wall_detector.py
(+78 files in other folders)
